  * New package GWW for GW calculations with Wannier functions
  * Grid parallelization for the phonon code, code cleanup
  * Better OpenMP+MPI parallelization
  * Real-space PP non-local projectors (experimental)
  * Martyna-Tuckerman algorithm for isolated systems
  * Better q=>0 limit for Exact-Exchange calculations
  * HSE functional

Fixed in version 4.1.2:

  * call to invsym with overlapping input and output matrix could 
    result in bogus error message

  * cp.x: update of dt with autopilot wasn't working

  * wavefunctions for extrapolation written to wfcdir and not to outdir

  * Some constraints were not working in solids, due to an incorrect
    estimate of the maximum possible distance between two atoms

  * Parallel execution of D3 wasn't working in at least some cases
    (e.g. with k-point parallelization) since a long time

  * restart of phonon code with PAW wasn't working

Fixed in version 4.1.1:

  * newly added DFT-D wasn't working properly with k-point parallelization

  * Gamma-only phonon code wasn't working any longer if pseudopotentials
    with nonlinear core correction were used

  * Check of lspinorb flag consistency between left/right lead and
    scattering region in pwcond.x was not working properly; wrong
    print-out of E-Ef when Nchannels=0 also fixed.

  * Check on convergence of variable-cell damped dynamics was not
    working as expected in the presence of constraints

  * Velocity rescaling in CP was not working, and it was performed
    also if not required when ion velocities were set to 'random'

  * ESPRESSO_TMPDIR is caught by gipaw.x as well
 
  * Phonon calculation could not be performed with only local PPs

  * Small error in the definition of the saw-tooth potential for slab
    calculations with E-field: the "physical" dimensions of the R-space
    grid are nr1,nr2,nr3 NOT nrx1,nrx2,nrx3

  * Misc compilation problem for: gfortran v.4.1 (casino2upf),